fix download error, support multiple images input

--- a/apps/Android/MnnLlmChat/app/src/main/res/layout/activity_chat.xml
+++ b/apps/Android/MnnLlmChat/app/src/main/res/layout/activity_chat.xml
@@ -99,6 +99,22 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     >
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/image_preview_recycler"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:paddingStart="12dp"
+                        android:paddingEnd="12dp"
+                        android:clipToPadding="false"
+                        android:layout_marginTop="12dp"
+                        android:layout_marginBottom="20dp"
+                        android:visibility="gone"
+                        tools:visibility="visible"
+                        tools:listitem="@layout/item_image_preview"
+                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                        />
+                    
                     <androidx.cardview.widget.CardView
                         android:id="@+id/image_preview_layout"
                         android:layout_width="wrap_content"
