--- a/apps/Android/MnnLlmChat/app/src/main/res/layout/popup_image_dialog.xml
+++ b/apps/Android/MnnLlmChat/app/src/main/res/layout/popup_image_dialog.xml
@@ -1,24 +1,13 @@
 <!-- res/layout/popup_image_dialog.xml -->
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="#00F"
+    android:background="@android:color/black"
     android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/popupImageView"
-        android:layout_width="500dp"
-        android:layout_height="500dp"
-        android:adjustViewBounds="true"
-        tools:src="@drawable/testtest"
-        android:layout_centerInParent="true"
-        android:scaleType="centerCrop" />
-
-<!--    <Button-->
-<!--        android:id="@+id/btnSaveImage"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:text="Save Image" />-->
-
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/viewPager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 </FrameLayout>
