--- a/apps/Android/MnnLlmChat/app/src/main/res/layout/fragment_voice_chat.xml
+++ b/apps/Android/MnnLlmChat/app/src/main/res/layout/fragment_voice_chat.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:clickable="true"
     android:background="?attr/colorSurface"
     tools:context=".chat.voice.VoiceChatFragment">
 
