--- a/apps/Android/MnnLlmChat/app/src/main/res/drawable/bg_rounded_button.xml
+++ b/apps/Android/MnnLlmChat/app/src/main/res/drawable/bg_rounded_button.xml
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <corners android:radius="16dp" />
-    <stroke
-        android:width="1dp"
-        android:color="?attr/colorOutline" />
-    <solid android:color="?attr/colorSurfaceVariant" />
-</shape> 
+    <corners android:radius="35dp" />
+    <solid android:color="#33FFFFFF" />
+</shape>
